[tool.poetry]
name = "random-restaurant-generator"
version = "0.1.0"
description = "Generating a random restaurant"
authors = ["James McGonigle <jamesmcgonigle@kubrickgroup.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21"
pandas = "^1.3"
matplotlib = "^3.4"
openai = "^0.27.0"
torch = "^1.10"
streamlit = "^1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
